<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_margin="5dp"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_ad_funcionario"
    tools:context=".view.AdicionarFuncionarioActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView android:id="@+id/txtCadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="16dp"
            android:text="@string/txtCadastro"
            android:textColor="#073083"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView android:id="@+id/txtNome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16sp"
            android:text="Nome Completo"
            android:textColor="#073083"
            android:textStyle="bold" />

        <EditText android:id="@+id/editNomeCompleto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            android:ems="10"
            android:textSize="20dp"
            android:hint="Nome Completo"
            android:inputType="textPersonName" />

        <TextView android:id="@+id/txtCpf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="CPF"
            android:textColor="#073083"
            android:textStyle="bold" />

        <EditText android:id="@+id/editCpf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8sp"
            android:layout_marginRight="16dp"
            android:ems="10"
            android:hint="CPF"
            android:textSize="20dp"
            android:inputType="number" />

        <TextView android:id="@+id/txtNomeEmpresa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="Empresa"
            android:textColor="#073083"
            android:textStyle="bold" />

        <EditText android:id="@+id/editNomeEmpresa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            android:ems="10"
            android:hint="Nome Empresa"
            android:textSize="20dp"
            android:inputType="text" />

        <TextView android:id="@+id/txtCnpj"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="CNPJ"
            android:textColor="#073083"
            android:textStyle="bold" />

        <EditText android:id="@+id/editCnpj"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            android:ems="10"
            android:hint="CNPJ"
            android:textSize="20dp"
            android:inputType="number" />

        <TextView android:id="@+id/txEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="Email"
            android:textColor="#073083"
            android:textStyle="bold" />

        <EditText android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8sp"
            android:layout_marginRight="16dp"
            android:ems="10"
            android:hint="Email"
            android:textSize="20dp"
            android:inputType="textEmailAddress" />

        <TextView android:id="@+id/txtSenha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="Senha"
            android:textColor="#073083"
            android:textStyle="bold" />

        <EditText android:id="@+id/editSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8sp"
            android:layout_marginRight="16dp"
            android:ems="10"
            android:hint="Senha"
            android:textSize="20dp"
            android:inputType="textPassword" />
        <TextView android:id="@+id/txtSenha2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="Repitir Senha"
            android:textColor="#073083"
            android:textStyle="bold" />

        <EditText android:id="@+id/editSenha2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8sp"
            android:layout_marginRight="16dp"
            android:ems="10"
            android:hint="Senha"
            android:textSize="20dp"
            android:inputType="textPassword" />

        <CheckBox android:id="@+id/ckTermos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:onClick="validarTermo"
            android:layout_marginTop="8dp"
            android:text="@string/ckbTermo"
            android:textColor="#073083"
            android:textStyle="bold" />

        <Button android:id="@+id/btnCadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/black"
            android:text="@string/btnCadastrar"
            />
        <Button android:id="@+id/btnVoltar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/black"
            android:text="@string/voltar"
            />
    </androidx.appcompat.widget.LinearLayoutCompat>



</ScrollView>